--- a/maa.html
+++ b/maa.html
@@ -68,7 +68,7 @@
             body{
           margin: 0;
           padding: 0;
-          background: url(assets/malmanxx-wKezNOMZJJc-unsplash.jpg) no-repeat;
+          background: url(assets/leaf1.jpg) no-repeat;
           background-size: cover;
         }
       
@@ -106,6 +106,7 @@
         }
         .box p{
           text-align: justify;
+            color:white;
         }
         ul{
           margin: 0;
