--- a/istrah.html
+++ b/istrah.html
@@ -105,6 +105,7 @@
             }
             .box p{
               text-align: justify;
+                color:white;
             }
             ul{
               margin: 0;
