--- a/sachhapyaar.html
+++ b/sachhapyaar.html
@@ -107,6 +107,7 @@
         }
         .box p{
           text-align: justify;
+            color:white;
         }
         ul{
           margin: 0;
