--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blogger</title>
+    <title>Ankahi Ansuni</title>
 
    
    <link rel="stylesheet" href="./css/all.css">
@@ -24,7 +24,7 @@
    <nav class="nav">
        <div class="nav-menu flex-row">
            <div class="nav-brand">
-               <a href="#" class="text-gray">Aman Aryan</a>
+               <a href="index.html" class="text-gray">Aman Aryan</a>
            </div>
            <div class="toggle-collapse">
                <div class="toggle-icons">
